modificacao dno javascript
modificacao dno javascript e html, teste de funcao com for

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
           </tr>
           <tr class="horario manha">
             <th class="time "><span>7:00 - 8:00</span></th>
-            <td id="1a"></td>
-            <td id="1b"></td>
-            <td id="1c"></td>
-            <td id="1d"></td>
-            <td id="1e"></td>
-            <td id="1f"></td>
-            <td id="1g"></td>
+            <td id="11"></td>
+            <td id="12"></td>
+            <td id="13"></td>
+            <td id="14"></td>
+            <td id="15"></td>
+            <td id="16"></td>
+            <td id="17"></td>
           </tr>
           <tr class="horario manha">
             <th class="time"><span>8:00 - 9:00</span></th>
@@ -310,11 +310,11 @@
 
           <div class="turno">                        
             <label for="turnoManha">Manha</label>
-            <input type="radio" name="turno" id="turnoManha" value="1">
+            <input type="radio" name="turno" id="turnoManha">
             <label for="turnoTarde">Tarde</label>
-            <input type="radio" name="turno" id="turnoTarde" value="2">
+            <input type="radio" name="turno" id="turnoTarde">
             <label for="turnoNoite">Noite</label>
-            <input type="radio" name="turno" id="turnoNoite" value="manha">
+            <input type="radio" name="turno" id="turnoNoite">
             
             <span id="missingFieldTurno" style="color: red;"></span>
 
