dia da semana e table ajustada
table agora esta no formato de um dia so, no topo da tela mostra que dia é hoje

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <a href="#" class="close" onclick="closeSlideMenu()">
           <i class="fas fa-times"></i> <!-- JS => add X -->
         </a>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Opçōes</a>
         <a href="#">Configurações</a>
-        <a href="#">Lorem</a>
+        <a href="myday.html">MyDay</a>
         <a href="#">lorem</a>
       </div>
     </div>
