criacao da funcao mydayMaterias putMaterias
mydayMateria pegas as informacoes do json e armazena em forma de array, put my materias coloca as informacoes da mydayMaterias na pagina MyDay no html

--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
     <div class="bg-modal"></div>
 
     <!-- Botoa flutuante para adicao de tarefas-->
-    <button onclick="btnOpenAdd()" id="stickybutton">+</button>
+    <span style="font-size: 3rem;
+    margin-left: 90%;
+    margin-bottom: 50px;">
+      <button onclick="btnOpenAdd()" id="stickybutton">+</button>
+    </span>
   </main>
 
 
