Correcao de bugs
Bug sulocionado:
 - com a implementacao da pagina myday.html, sua funcao para mostrar as disciplinas na tela interferio com a mostrar disciplinas da index.html [CORRIGIDO]

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   <main>
 
     <!-- button para add novas taferas a timetable -->
-    <span style="font-size: 3rem;
+    <!--<span style="font-size: 3rem;
                  margin-left: 90%;
                  margin-bottom: 50px;">
       <i onclick="btnOpenAdd()" class="fas fa-plus"></i>
-    </span>
+    </span>-->
     <section>
       <div class="table">
         <table>
