Funcionalidade de adicao/remocao de item disciplina do local storage
Remocao  de item disciplina do local storage
 - janela para remocao/adicao
 - funcionalodade para remover ou adicionar

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         </a>
         <a href="index.html">Home</a>
         <a href="#">Opçōes</a>
-        <a href="#">Configurações</a>
+        <a id="configDisciplinas">Manipular Disciplinas</a>
         <a href="myday.html">MyDay</a>
-        <a href="#">lorem</a>
       </div>
     </div>
   </nav>
@@ -226,8 +225,6 @@
       <button onclick="btnOpenAdd()" id="stickybutton">+</button>
     </span>
   </main>
-
-
 
 
   <script src="javaScript.js"></script>
