Visualização de tarefas da disciplina
feito:
 - botao para adicao de materia aotomaticas escondido. Razao, estava atrapalhando com o vieport pequeno.
 - Janela para vizualizar materia
     - vizualizacao da anotacoes
     - adicao de anotacoes
 - botao para limpar local storage

Falta a fazer:
 - armazenamento do estado das checkbox de tarefas dentro de materia

--- a/myWeek.html
+++ b/myWeek.html
@@ -35,6 +35,7 @@
         <a href="index.html">Home</a>
         <a href="#">Opçōes</a>
         <a id="configDisciplinas">Manipular Disciplinas</a>
+        <a id="del_localStorage">Apagar local Storage</a>
         <a href="myday.html">MyDay</a>
       </div>
     </div>
@@ -216,14 +217,55 @@
 
 
     <!-- Pop-up windown para add tarefas a timetable -->
-    <div class="bg-modal"></div>
+    <div class="bg-modal">
+      <!-- 
+        <div class="viewDisciplina">
+        <i class="fas fa-times btnClose"></i>
 
-    <!-- Botoa flutuante para adicao de tarefas-->
-    <span style="font-size: 3rem;
+        <div class="box_nomeMateria">Calculo 1</div>
+          <span class="span_tagAnotacoes">Anotações:</span>
+          <div class="content_anotacoes">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod placeat provident optio consequuntur. Nihil fugiat magni nam, perferendis quo sint, assumenda unde autem animi qui aperiam esse delectus quae dolorem? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt voluptatibus nulla quibusdam cupiditate mollitia. Praesentium, est ea, nobis eos eius maxime illum cupiditate veniam facere veritatis, consequatur aut blanditiis dicta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quia quos assumenda accusantium recusandae earum!</div>
+        <div class="span_tagTarefas"><span>Tarefas:</span></div>
+        
+        <div class="box_tarefas">
+          <div class="item_tarefa">
+            <div class="nome_itemTarefa">
+              quanto e calculo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil ducimus quod corrupti doloremque aliquid enim error laborum doloribus sapiente. Maxime temporibus quod voluptatum quo aperiam suscipit recusandae alias quos a!
+            </div>
+            <span class="checkBox_itemTarefa">
+              <input type="checkbox" name="cBItem" id="cBItem">
+            </span>
+          </div>
+          
+        </div>
+        <div class="btnViewDisciplina">
+          <i class="fas fa-times btnAddTarefa"></i>
+          <i class="fas fa-times btnRemTarefa"></i>
+        </div>
+      </div> -->
+      <!-- <div class="viewDisciplina">
+        <i class="fas fa-times btnClose"></i>
+
+        <div class="box_nomeMateria">Adicione tarefa</div>
+
+        <div class="box_input_addTarefa">
+          <div class="input_nameAddTarefa">Tarefa:</div>
+          <input type="text" name="input_addTarefa" id="input_addTarefa" placeholder="Nome tarefa">
+        </div>
+
+
+        <div class="btnViewDisciplina">
+          <i class="fas fa-times btnAddTarefa"></i>
+          <i class="fas fa-times btnRemTarefa"></i>
+        </div>
+      </div> -->
+    </div>
+      <!-- Botoa flutuante para adicao de tarefas-->
+      <!-- <span style="font-size: 3rem;
     margin-left: 90%;
     margin-bottom: 50px;">
       <button onclick="btnOpenAdd()" id="stickybutton">+</button>
-    </span>
+    </span> -->
   </main>
 
 
