Pagina de Configuracoes
Funcionalidade adicionadas:
 - janela de configuracoes
    - nela é possivel ver todas as disciplinas e seus comentarios, add nova disciplina ou remover
 - edicao de anotacoes
 - verificacao se existe um local storage
    - if True: cria um novo local storage
    - if False: nao faz nada

--- a/myday.html
+++ b/myday.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -28,15 +27,17 @@
       </span>
 
       <!-- Inside Sidebar  - X  -->
-      <div id="menu" class="nav">
+      <div id="menu" class="nav_bar">
         <a href="#" class="close" onclick="closeSlideMenu()">
           <i class="fas fa-times"></i> <!-- JS => add X -->
         </a>
         <a href="index.html">Home</a>
-        <a href="#">Opçōes</a>
-        <a href="#">Configurações</a>
-        <a href="myday.html">Myday</a>
-        <a href="#">lorem</a>
+        <a href="myWeek.html">MyWeek</a>
+        <a href="myday.html">MyDay</a>
+        <a href="configuracao.html">Configurações</a>
+        <!-- <a id="configDisciplinas">Manipular Disciplinas</a> -->
+        <a id="del_localStorage">Apagar local Storage</a>
+      </div>
       </div>
     </div>
   </nav>
