--- a/myWeek.html
+++ b/myWeek.html
@@ -261,13 +261,12 @@
       </div> -->
     </div>
       <!-- Botoa flutuante para adicao de tarefas-->
-      <!-- <span style="font-size: 3rem;
-    margin-left: 90%;
-    margin-bottom: 50px;">
-      <button onclick="btnOpenAdd()" id="stickybutton">+</button>
-    </span> -->
+      <span>
+        <button onclick="btnOpenAdd()" id="stickybutton">+</button>
+      </span>
   </main>
 
+  <div id="stop_scrolling"></div>
 
   <script src="javaScript.js"></script>
 </body>
