--- a/myWeek.html
+++ b/myWeek.html
@@ -36,7 +36,7 @@
         <a href="myday.html">MyDay</a>
         <a href="configuracao.html">Configurações</a>
         <!-- <a id="configDisciplinas">Manipular Disciplinas</a> -->
-        <a id="del_localStorage" onclick="delete_localStorage()">Apagar local Storage</a>
+        <a id="del_localStorage" onclick="delete_localStorage()">Apagar Agenda</a>
       </div>
     </div>
   </nav>
@@ -260,10 +260,10 @@
         </div>
       </div> -->
     </div>
-      <!-- Botoa flutuante para adicao de tarefas-->
-      <span>
-        <button onclick="btnOpenAdd()" id="stickybutton">+</button>
-      </span>
+    <!-- Botoa flutuante para adicao de tarefas-->
+    <span>
+      <button onclick="btnOpenAdd()" id="stickybutton">+</button>
+    </span>
   </main>
 
   <div id="stop_scrolling"></div>
