--- a/myday.html
+++ b/myday.html
@@ -36,9 +36,9 @@
         <a href="myday.html">MyDay</a>
         <a href="configuracao.html">Configurações</a>
         <!-- <a id="configDisciplinas">Manipular Disciplinas</a> -->
-        <a id="del_localStorage">Apagar local Storage</a>
+        <a id="del_localStorage" onclick="delete_localStorage()">Apagar Agenda</a>
       </div>
-      </div>
+    </div>
     </div>
   </nav>
 
@@ -123,12 +123,12 @@
           </tr>
           <tr class="horario noite">
             <th class="time"><span>20:00 - 21:00</span></th>
-            <td id="My15"></td>
+            <td id="My14"></td>
 
           </tr>
           <tr class="horario noite">
             <th class="time"><span>21:00 - 22:00</span></th>
-            <td id="My16"></td>
+            <td id="My15"></td>
 
           </tr>
         </table>
